[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
walkdir = "2.3.2"
calamine = "0.19.1"
serde = { version = "1.0.154", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
typed-builder = "0.14.0"
bincode = "1.3.3"
lz4 = "1.24.0"
clap = { version = "4.1.8", features = ["derive"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["local-time"] }

[features]

[[bin]]
name = "excel_tool"
path = "src/bin/excel_tool.rs"