[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
mlua = { version = "0.8.8", features = ["luajit", "vendored", "serialize", "macros"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
prost = "0.11.8"

[build-dependencies]
anyhow = "1.0.69"
walkdir = "2.3.2"
protoc-bin-vendored = "3.0.0"
prost-build = "0.11.8"

[features]