[package]
name = "stardust-protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
mlua = { version = "0.8.8", features = ["luajit", "vendored", "serialize"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
protobuf = { version = "3.2.0" }

[build-dependencies]
anyhow = "1.0.69"
walkdir = "2.3.2"
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"